--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head></head>
 <body>
-    <section class="">
+    <section class="header">
         <div>
         <h1>Name: Tim Klapdor</h1>
         <p class="tagline">Technology | Design | Education</p>
