--- a/built-resume.html
+++ b/built-resume.html
@@ -31,13 +31,13 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<header class="u-full-width" id="header" style="background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)), url('../images/tim-hd.jpg">
+<section class="u-full-width" id="header" style="-webkit-transform: translate3d(0px, 0px, 0px) opacity: 1;">
 
     <div class="site-title">
         <h1 class="title">Tim Klapdor</h1>
         <p class="tagline">Technology | Design | Education</p>
     </div> 
-</header>
+</section>
 <section class="container" id="bio">
 
 <div class="container" align="center">  
