--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 --- 
 
-layout: default 
+layout: page
+description: "Technology | Design | Education"
 
 ---
 
-<section class="u-full-width" id="header" style="-webkit-transform: translate3d(0px, 0px, 0px) opacity: 1;">
 
-    <div class="site-title">
-        <h1 class="title">Tim Klapdor</h1>
-        <p class="tagline">Technology | Design | Education</p>
-    </div> 
-</section>
 
 <div class="container" align="center">  
 <div class="headline">
