--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
                     <li><strong>Name </strong>{{ profile.name }}</li>
                     <li><strong>Location </strong>{{ profile.location }}</li>
                     <li><strong>Country </strong>{{ profile.country }}</li>
-                    <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}"</a></li>
+                    <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}</a></li>
                     <li><strong>Twitter </strong><a href="https://twitter.com/{{ profile.twitter }}">{{ profile.twitter }}</a></li>
                     <li><strong>Blog </strong><a href="{{ profile.blog }}">Wordpress</a>
                     <li><strong>LinkedIn </strong> <a href="{{ profile.linkedin }}"> Profile</a></li>
