--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
                     <li><strong>Blog </strong><a href="{{ profile.blog }}">Wordpress</a>
                     <li><strong>LinkedIn </strong> <a href="{{ profile.linkedin }}"> Profile</a></li>
                     <li><strong>GitHub </strong> <a href="{{ profile.github }}">Repositories</a></li>
-                    <li><strong>Flickr </strong><a href="{{ profile.flickr }}">Photots</a></li>
+                    <li><strong>Flickr </strong><a href="{{ profile.flickr }}">Photos</a></li>
                     <li><strong>Slideshare </strong><a href="{{ profile.slideshare }}">Presentations</a></li>
                 </ul>
             </div>
