Attempt to clean up and make this more "forkable"

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ layout: default
 
     <div class="container" align="center">  
         <div class="headline" align="center">
-        <p><span>Outside of Work</span></p>
+        <p><span>Outside</span></p>
         <h2>Interests</h2>
         </div>
     </div>
