more boilerplate - remove portfolio... haven't finished yet

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: default
     <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Recognition</span></p>
-            <h2>Honours &amp Awards</h2>
+            <h2>Honours &amp; Awards</h2>
         </div>
     </div>
     
